<resources>
    <string name="app_name">Material File Manager</string>

    <string name="directory_empty">No files in this directory</string>

    <string name="select_mode_title">%1$d selected</string>

    <string name="dialog_delete_title">Delete selected items?</string>
    <string name="dialog_delete_message">
        Deleting the selected items will permanently remove them from your device and they cannot be
        recovered
    </string>
    <string name="dialog_delete_action">Delete</string>

    <string name="dialog_rename_title">Rename file</string>
    <string name="dialog_rename_action">Rename</string>
    <string name="dialog_rename_existsError">Entry \'%s\' already exists</string>

    <string name="dialog_newFolder_menuitem">Create New Folder</string>
    <string name="dialog_newFolder_title">Create New Folder</string>
    <string name="dialog_newFolder_action">Create</string>
    <string name="dialog_newFolder_existsError">Folder \'%s\' already exists</string>

    <string name="action_copy">Copy</string>
    <string name="action_cut">Cut</string>
    <string name="action_paste">Paste</string>

    <string name="permissions_storage_neverAskAgain_message">
        You have denied the \'Storage\' permission. This app, being a file manager, requires it to
        read and write to the filesystem of your device. Follow steps below to enable the
        permission:
    </string>
    <string name="permissions_storage_neverAskAgain_step1">1. Tap here to open app\'s settings</string>
    <string name="permissions_storage_neverAskAgain_step2">2. Tap on \'Permissions\'</string>
    <string name="permissions_storage_neverAskAgain_step3">3. Tap on \'Storage\' to enable the permission</string>

    <string name="permissions_storage_denied_message">
        You have denied the \'Storage\' permission. This app, being a file manager, requires it to
        read and write to the filesystem of your device.
    </string>
    <string name="permissions_storage_denied_request">Tap here to allow permission</string>
    <string name="toast_delete_failed">Could not delete selected files: Unknown errror</string>
    <string name="toast_rename_failed">Could not rename selected file: Unknown errror</string>
    <string name="toast_newFolder_failed">Could not create new folder: Unknown errror</string>
    <string name="toast_copy_failed">Could not complete copy operation: Unknown error</string>
    <string name="toast_cut_failed">Could not delete cut files: Unknown error</string>

</resources>
