<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/error_neverAskAgain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone"
    tools:visibility="visible"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_normal"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permissions_storage_neverAskAgain_message"
            style="@style/Text"
            />

        <TextView
            android:id="@+id/link_goto_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/spacing_normal"
            android:paddingTop="@dimen/spacing_normal"
            android:text="@string/permissions_storage_neverAskAgain_step1"
            style="@style/Text.Link"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permissions_storage_neverAskAgain_step2"
            style="@style/Text"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:padding="@dimen/spacing_small"
            app:srcCompat="@drawable/permissions_storage_never_ask_again_img1"
            style="@style/Image.Border"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/permissions_storage_neverAskAgain_step3"
            style="@style/Text"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            app:srcCompat="@drawable/permissions_storage_never_ask_again_img2"
            style="@style/Image.Border"
            />

    </LinearLayout>

</ScrollView>